# multi-tenat-invoce-reconciliation

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  implementation_guide.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/ai/: __init__.py  provider.py
app/api/: __init__.py  dependencies.py  errors.py  router.py
app/api/endpoints/: __init__.py  bank_transactions.py  invoices.py  reconciliation.py  tenants.py
app/core/: __init__.py  database.py  settings.py  tenant.py
app/db/: __init__.py  base.py  models.py
app/db/migrations/: env.py  (+1 more)
app/graphql/: __init__.py  context.py  schema.py
app/repositories/: bank_transaction.py  base.py  idempotency.py  invoice.py  match.py  tenant.py  vendor.py
app/schemas/: __init__.py  bank_transaction.py  invoice.py  match.py  tenant.py
app/services/: __init__.py  bank_transaction_service.py  exceptions.py  explanation_service.py  invoice_service.py  reconciliation_service.py  scoring.py  tenant_service.py
app/utils/: __init__.py  hash.py
tests/: conftest.py  test_explanation_service.py  test_services.py  test_tenant_context.py
tests/ai/: test_provider.py
tests/api/: test_bank_transactions_endpoint.py  test_dependencies.py  test_errors.py  test_invoices_endpoint.py  test_reconciliation_endpoint.py  test_router.py  test_tenants.py
tests/app/: test_main.py
tests/core/: test_database.py  test_settings.py
tests/db/: test_base.py  test_init.py  test_models.py
tests/graphql/: test_context.py  test_schema.py
tests/integration/: test_api.py
(+22 files in other folders)
